--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,33 @@ reset
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
+
+.card > .immagine1 {
+    width: 100%;
+    display: block;
+}
+
+.cartteristiche-card {
+    margin-bottom: 50px;
+}
+
 
 /*
 header  
 */
 
+header {
+    position: relative;
+    
+}
+
 .background-container-header {
     background-color: #ff6900;
     width: 100%;
+    /* position: fixed;
+    top: 0; */
 }
 
 
@@ -55,32 +73,100 @@ header
 main  
 */
 
+
+
 .container-main {
     width: 1200px;
-    margin: 30px auto 0;
+    margin: 100px auto 0;
     
 }
 
 .my-row {
     flex-wrap: wrap;
     display: flex;
-    margin-bottom: 50px;
-    
 }
 
 .card {
     min-height: 500px;
     border: 2px solid black;
-    background-color: aqua;
-    margin-bottom: 100px;
+    position: relative;
+    
 }
+
+
 
 .column-1-3:nth-child(3n+2) {
     margin: 0 20px;
 
 }
 
+.prezzo {
+    color: red;
+}
 
+.prezzo > span {
+    color: black;
+    text-decoration: line-through;
+}
+
+.caselle {
+    position: absolute;
+    bottom: 20px;
+    
+}
+
+.container-sconto {
+    background-color: red;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    font-size: small;
+    display: inline-block;
+    position: relative;
+    
+
+}
+
+.sostenibilità {
+    background-color: #008000;
+
+    
+}
+
+.cuoricino {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    text-align: center;
+    padding-top: 12px;
+    position: absolute;
+    top: 2%;
+    right: 0;
+
+}
+ 
+/* BONUS */
+.cuoricino:hover {
+    color: red;
+}
+
+.immagine1 {
+    display: block;
+    width: 100%;
+}
+
+.immagine2 {
+    display: none;
+    width: 100%;
+}
+
+.immagini:hover .immagine1 {
+    display: none;
+}
+
+.immagini:hover .immagine2 {
+    display: block;
+}
 /* 
 footer  
 */
@@ -88,12 +174,35 @@ footer
 .background-container-footer {
     background-color: #1a1a1a;
     width: 100%;
+    /* position: fixed;
+    bottom: 0; */
 }
 
 .informazioni {
     color: white;
+    padding: 30px 0;
 }
 
-.privacy {
+.informazioni > div {
+    margin-bottom: 20px;
+}
+.privacy > a {
     color: white;
+    text-decoration: none;
+    padding-right: 10px;
+}
+
+.social {
+    color: white;
+    text-align: center;
+    
+}
+
+.icone-footer {
+    margin: 10px;
+}
+
+.icone-footer > i {
+    padding: 5px;
+    font-size: 20px;
 }
