--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ reset
 .container {
     width: 1200px;
     min-height: 50px;
-    border: 2px solid black;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -51,8 +50,9 @@ header {
 .background-container-header {
     background-color: #ff6900;
     width: 100%;
-    /* position: fixed;
-    top: 0; */
+    position: fixed;
+    top: 0;
+    z-index: 1;
 }
 
 
@@ -88,9 +88,7 @@ main
 
 .card {
     min-height: 500px;
-    border: 2px solid black;
     position: relative;
-    
 }
 
 
@@ -175,7 +173,11 @@ footer
     background-color: #1a1a1a;
     width: 100%;
     /* position: fixed;
-    bottom: 0; */
+    bottom: 0;
+    left: 0px;
+    right: 0px;
+    margin-bottom: 0px; */
+    
 }
 
 .informazioni {
