--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ reset
 
 .column-1-3 {
     width: calc(100% / 3 - 20px);
-    
+    margin: 0 10px;
 }
 
 .container {
@@ -35,6 +35,16 @@ reset
 
 .cartteristiche-card {
     margin-bottom: 50px;
+}
+
+.categoria nav a {
+    color: white;
+    text-decoration: none;
+
+}
+
+.icone nav a {
+    color: white;
 }
 
 
@@ -77,13 +87,14 @@ main
 
 .container-main {
     width: 1200px;
-    margin: 100px auto 0;
+    margin: 100px auto -10px;
     
 }
 
 .my-row {
     flex-wrap: wrap;
     display: flex;
+    margin: 0 -10px;
 }
 
 .card {
@@ -93,10 +104,10 @@ main
 
 
 
-.column-1-3:nth-child(3n+2) {
+/* .column-1-3:nth-child(3n+2) {
     margin: 0 20px;
 
-}
+} */
 
 .prezzo {
     color: red;
@@ -110,6 +121,7 @@ main
 .caselle {
     position: absolute;
     bottom: 20px;
+    left: 0;
     
 }
 
@@ -205,6 +217,12 @@ footer
 }
 
 .icone-footer > i {
+    padding: 5px;
+    font-size: 20px;
+}
+
+.icone-footer nav a {
+    color: white;
     padding: 5px;
     font-size: 20px;
 }
